<resources>
    <string name="app_name">Punt Lila</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="correo">Correu</string>
    <string name="Password">Contrasenya</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="inicia_sessi">Inicia Sessió</string>
    <string name="nombre_completo">Nom Complet</string>
    <string name="RepeatPassword">Repetir Contrasenya</string>
    <string name="insertar_dni">Insertar DNI</string>
    <string name="chat">Escriure</string>
    <string name="EventTitle">Events</string>
    <string name="ButtonList">Llista</string>
    <string name="ButtonMap">Mapa</string>
    <string name="textoMenu">Menu</string>
    <string name="Eventos">Events</string>
    <string name="Charlas">Xerrades</string>
    <string name="Recursos">Recursos</string>
    <string name="PuntosLila">Punts Lila</string>
    <string name="SolicitudActivista">Sol·licitud Activista</string>
    <string name="CerrarSesion">Cerrar Sesion</string>
    <string name="activista">Activista</string>
    <string name="MisEvents">Mis eventos</string>
    <string name="textoActivista">¿Has olvidado tu contraseña?</string>
    <string name="condiciones">He leído y acepto las condiciones de uso y las Políticas de Privacidad</string>
    <string name="name">Nombre</string>
    <string name="recuperarCuenta">Recuperar Cuenta</string>
    <string name="Nombre_Usuario">Nom d\'usuari</string>
    <string name="channel_name">Formulari Enviat</string>
    <string name="channel_description">El formulari s\'ha enviat correctament.</string>
    <string name="formulari">Enviar formulari</string>
    <string name="textFormulari">Per fer-te activista, hauràs d\'omplir un formulari prement el botó següent</string>
    <string name="botonLila">Web Punt Lila</string>
    <string name="puntoLilaText">Els Punts Liles estan destinats a informar, sensibilitzar, denunciar i activar protocols davant de violències i agressions masclistes i LGTBI-fòbiques que es produeixin en espais públics, ja sigui de lleure i festius, com altres espais d\'interès públic (educatius, esportius, comercials, sanitaris, etc.)</string>
    <string name="AjustesUsu">Configuració Usuari</string>
    <string name="Chat">Xat</string>
</resources>