<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Purpura"
    android:backgroundTint="@color/Purpura">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Nombre"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        style="@style/barraTexto"
        android:hint="@string/nombre_completo"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:ignore="TouchTargetSizeCheck">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/correoId"
        android:layout_width="367dp"
        android:layout_height="41dp"
        android:layout_margin="20dp"
        style="@style/barraTexto"
        android:hint="@string/correo"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/contraId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/Nombre"
        app:layout_constraintVertical_bias="0.778">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/contraId"
        android:layout_width="368dp"
        android:layout_height="42dp"
        android:layout_margin="20dp"
        style="@style/barraTexto"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@id/repetirContra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.743">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/repetirContra"
        android:layout_width="370dp"
        android:layout_height="44dp"
        android:layout_margin="20dp"
        style="@style/barraTexto"
        android:hint="@string/RepeatPassword"
        android:inputType="textPassword"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/DNI"
        android:layout_width="362dp"
        android:layout_height="39dp"
        android:layout_margin="20dp"
        style="@style/barraTexto"
        android:hint="@string/insertar_dni"
        android:inputType="textPassword"
        android:text=""
        app:circularflow_radiusInDP="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repetirContra"
        app:layout_constraintVertical_bias="0.044">

    </com.google.android.material.textfield.TextInputEditText>

    <Switch
        android:id="@+id/activistaId"
        android:layout_width="83dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/activistaText"
        android:layout_width="194dp"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/textoActivista"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.591" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="267dp"
        android:layout_height="113dp"
        android:gravity="center"
        android:text="@string/condiciones"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <Button
        android:id="@+id/botonRegistro"
        android:layout_width="185dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/Morado"
        android:text="Registrarse"
        android:textColor="@color/black"
        app:circularflow_defaultRadius="50dp"
        app:circularflow_radiusInDP="50dp"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />

</androidx.constraintlayout.widget.ConstraintLayout>